--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta http-equiv="x-ua-compatible" content="ie-edge">
     <title>Title</title>
+    <link rel="stylesheet" href="css/all.css">
+
 </head>
 <body>
     <h1>Hello World</h1>
